--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>DCC202 - Atividade 4: LUIZA_CALDEIRA</title>
 </head>
 <body>
+    <main>
+        <h1>DCC202 - Atividade 4: LUIZA_CALDEIRA</h1>
+        <p>Esta é a página principal. Temos também a página sobre listas e tabelas.</p>
+    </main>
     
 </body>
 </html>
