Criando uma main e preenchendo com conteúdo

--- a/tabelas.html
+++ b/tabelas.html
@@ -6,6 +6,9 @@
     <title>DCC202 - Atividade 4 - Tabelas: LUIZA_CALDEIRA</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 4 - Tabelas: LUIZA_CALDEIRA</h1>
+        <p1>Esta é a página sobre tabelas. Temos também a página sobre listas e a página principal.</p1>
+    </main>
 </body>
 </html>
