Adicionando a âncora das palavras

--- a/tabelas.html
+++ b/tabelas.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <h1>DCC202 - Atividade 4 - Tabelas: LUIZA_CALDEIRA</h1>
-        <p1>Esta é a página sobre tabelas. Temos também a página sobre listas e a página principal.</p1>
+        <p1>Esta é a página sobre tabelas. Temos também a página sobre <a href= "listas.html">listas</a> e a <a href="index.html">página principal</a></p1>
     </main>
 </body>
 </html>
